--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。该模组无明确的主题，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m03d28(魔法更新)，支持Minecraft Java版 1.14快照19w12a+。</p>
+<p>最新版本为测试版v1.9-m04d02(魔法更新)，支持Minecraft Java版 1.14快照19w12a+。</p>
 
 
 <h3 id="download">📦 下载地址</h3>
@@ -80,9 +80,9 @@
 </tr>
 <tr>
 	<td>Minecraft Java版 19w12a+</td>
-	<td>Crafting++ 1.9测试版m03d28</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m03d28.zip">github</a>
-	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m03d28.zip">官方</a></td>
+	<td>Crafting++ 1.9测试版m04d02</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m04d02.zip">github</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m04d02.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/commit/04b75fd9d3df5fc2a84f4c36e158182592b720b7">更新日志</a></td>
 </tr>
 <tr>
@@ -441,9 +441,9 @@
 · <a href="#snow_boots"><span class="ci" style="background-position: -48px -416px;"></span>雪地靴</a> 
 · <a href="#classical_painting"><span class="ci" style="background-position: -64px -416px;"></span>经典画作</a> 
 · <a href="#spring_festival_decorations"><span class="ci" style="background-position: -16px -624px;"></span>新春装饰</a> 
-· <a href="#bedsheet"><span class="ci" style="background-position: -96px -608px;"></span>
+· <a href="#character"><span class="ci" style="background-position: -96px -608px;"></span>
 <span class="ci" style="background-position: -112px -608px;"></span>
-<span class="ci" style="background-position: -128px -608px;"></span>床单</a> 
+<span class="ci" style="background-position: -128px -608px;"></span>纸片人</a> 
 · <a href="#colorful_sign"><span class="ci" style="background-position: -64px -560px;"></span>彩色告示牌</a> 
 · <a href="#glass_item_frame"><span class="ci" style="background-position: -80px -416px;"></span>玻璃物品展示框</a> 
 · <a href="#stairs"><span style="background-position: -352px -448px;"></span>楼梯</a> 
@@ -2701,7 +2701,7 @@
 
 <h3 id="santa_gift">圣诞礼物 (Santa Gift)</h3>
 <span class="ui single"><span class="ci santa_gift"></span></span>
-<p>从<a href="#trade">圣诞老人</a>处可购买，打开后可随机获得鞘翅、附魔钻石盔甲/工具/剑、矿物、金苹果、马铠、种子包和<a href="#bedsheet">床单</a>。</p>
+<p>从<a href="#trade">圣诞老人</a>处可购买，打开后可随机获得鞘翅、附魔钻石盔甲/工具/剑、矿物、金苹果、马铠、种子包和<a href="#character">纸片人</a>。</p>
 
 <h3 id="stone_tools">石制工具 (Stone Tools)</h3>
 <span class="ui single"><span class="stone_axe"></span></span>
@@ -4466,11 +4466,26 @@
 </span></td></tr>
 </tbody></table>
 
-<h3 id="bedsheet">床单 (Bedsheet)</h3>
-<span class="ui single"><span class="ci bedsheet01"></span></span>
-<span class="ui single"><span class="ci bedsheet02"></span></span>
-<span class="ui single"><span class="ci bedsheet03"></span></span>
-<p>对床shift右键即可使用，共八种样式。从<a href="#trade">圣诞老人村民</a>处购买圣诞礼物有几率得到。</p>
+<h3 id="character">纸片人 (Character)</h3>
+<span class="ui single"><span class="ci character01"></span></span>
+<span class="ui single"><span class="ci character02"></span></span>
+<span class="ui single"><span class="ci character03"></span></span>
+<span class="ui single"><span class="ci character04"></span></span>
+<span class="ui single"><span class="ci character05"></span></span>
+<span class="ui single"><span class="ci character06"></span></span>
+<span class="ui single"><span class="ci character07"></span></span>
+<span class="ui single"><span class="ci character08"></span></span>
+<span class="ui single"><span class="ci character09"></span></span>
+<span class="ui single"><span class="ci character10"></span></span>
+<span class="ui single"><span class="ci character11"></span></span>
+<span class="ui single"><span class="ci character12"></span></span>
+<span class="ui single"><span class="ci character13"></span></span>
+<span class="ui single"><span class="ci character14"></span></span>
+<span class="ui single"><span class="ci character15"></span></span>
+<span class="ui single"><span class="ci character16"></span></span>
+<span class="ui single"><span class="ci character17"></span></span>
+<span class="ui single"><span class="ci character18"></span></span>
+<p>对床shift右键即可使用，共18种样式。从<a href="#trade">圣诞老人村民</a>处购买圣诞礼物有几率得到。包括：樱之宫莓香、日向夏帆、星川麻冬、天野美雨、神崎日照、鹿目圆香、晓美焰、美树沙耶香、巴麻美、佐仓杏子、篝敦子、洛蒂·杨森、苏西·曼芭芭拉、夏莉欧·杜诺尔、春风DoReMi、藤原羽月、妹尾爱子、木之本樱、小起。</p>
 
 <h3 id="colorful_sign">彩色告示牌 (Colorful Sign)</h3>
 <span class="ui single"><span class="ci white_sign"></span></span>
@@ -5087,7 +5102,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-03-28</p>
+<p>最后更新 2019-04-02</p>
 </footer>
 </article>
 </body></html>
