--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 <tr>
 	<td>Minecraft Java版 19w12a+</td>
 	<td>Crafting++ 1.9测试版m04d15</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m04d15.zip">github</a>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/download/v1.9m04d15/v1.9m04d15.zip">github</a>
 	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m04d15.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/commits/master">更新日志</a></td>
 </tr>
 <tr>
 	<td>Minecraft Java版 1.13.1-1.13.2</td>
 	<td>Crafting++ 1.8.4</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/v1.8.4.zip">github</a>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/download/v1.8.4/v1.8.4.zip">github</a>
 	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.4.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/change.log">更新日志</a></td>
 </tr>
