--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <tr>
 	<td>Minecraft Java版 19w12a+</td>
 	<td>Crafting++ 1.9测试版m04d17</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/download/v1.9m04d17/v1.9m04d17.zip">github</a>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/download/v1.9-m04d17/v1.9-m04d17.zip">github</a>
 	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m04d17.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/commits/master">更新日志</a></td>
 </tr>
