--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。该模组无明确的主题，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m04d19(魔法更新)，支持Minecraft Java版 1.14快照19w12a+。</p>
+<p>最新版本为测试版v1.9-m04d21(魔法更新)，支持Minecraft Java版 1.14快照19w12a+。</p>
 
 
 <h3 id="download">📦 下载地址</h3>
@@ -70,27 +70,24 @@
 	<li><a href="https://github.com/ruhuasiyu/CraftingPlusPlus">github 页面</a></li>
 </ul>
 
-<table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th>下载地址</th><th>更新日志</th></tr></thead>
+<table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th>下载地址</th></tr></thead>
 <tbody>
 <tr>
 	<td>Minecraft Java版 1.14</td>
 	<td>Crafting++ 1.9</td>
 	<td>尚未发布</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
 </tr>
 <tr>
 	<td>Minecraft Java版 19w12a+</td>
-	<td>Crafting++ 1.9测试版m04d19</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/download/v1.9-m04d19/v1.9-m04d19.zip">github</a>
-	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m04d19.zip">官方</a></td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/commits/master">更新日志</a></td>
+	<td>Crafting++ 1.9测试版m04d21</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9-m04d21">github</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m04d21.zip">官方</a></td>
 </tr>
 <tr>
 	<td>Minecraft Java版 1.13.1-1.13.2</td>
 	<td>Crafting++ 1.8.4</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/download/v1.8.4/v1.8.4.zip">github</a>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.8.4">github</a>
 	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.8.4.zip">官方</a></td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.8/change.log">更新日志</a></td>
 </tr>
 </tbody></table>
 
@@ -290,7 +287,8 @@
 · <a href="#elder_s_words"><span class="ci" style="background-position: -96px -144px;"></span>年长者之教诲</a> 
 · <a href="#coordinate_recorder"><span class="ci" style="background-position: -112px -144px;"></span>坐标记录仪</a> 
 · <a href="#grafter"><span class="ci" style="background-position: -128px -144px;"></span>剪枝器</a> 
-· <a href="#glass_pickaxe"><span class="ci" style="background-position: -112px -416px;"></span>玻璃镐</a>
+· <a href="#glass_pickaxe"><span class="ci" style="background-position: -112px -416px;"></span>玻璃镐</a> 
+· <a href="#chest_transporter"><span class="ci" style="background-position: -16px -720px;"></span>搬箱器</a> 
 · <a href="#roost"><span class="ci" style="background-position: -16px -592px;"></span>鸡窝</a>
 · <a href="#firecrackers"><span class="ci" style="background-position: -80px -624px;"></span>鞭炮</a>
 · <a href="#flags"><span class="ci" style="background-position: -0px -576px;"></span><span class="ci" style="background-position: -16px -576px;"></span><span class="ci" style="background-position: -32px -576px;"></span><span class="ci" style="background-position: -48px -576px;"></span><span class="ci" style="background-position: -64px -576px;"></span>旗帜</a>
@@ -872,6 +870,7 @@
 
 <p>
 包括左侧方块输入槽，上部工具输入槽，右侧2个输出槽。最左侧槽位控制输出方向，按Q或Shift+左键切换模式，若输出方向有箱子/潜影箱/陷阱箱/木桶则会自动输出到箱子内。</p>
+<p>工具若有耐久会消耗1点耐久，否则不会被消耗。</p>
 <p>被强充能时停止工作。</p>
 
 <table><thead><tr><th>工具</th><th>配方</th><th>配方</th></tr></thead><tbody>
@@ -5359,7 +5358,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-04-17</p>
+<p>最后更新 2019-04-19</p>
 </footer>
 </article>
 </body></html>
